--- a/mall customer segmentation.ipynb
+++ b/mall customer segmentation.ipynb
@@ -228,7 +228,7 @@
     "gender_counts = df['Genre'].value_counts()\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
-    "plt.bar(gender_counts.index, gender_counts.values, color=['blue', 'pink'])\n",
+    "plt.bar(gender_counts.index, gender_counts.values, color=['pink', 'blue'])\n",
     "plt.xlabel('Gender')\n",
     "plt.ylabel('Count')\n",
     "plt.title('Gender Distribution')\n",
